tests/lang/compile_fail/pkg_fn_private.kojs
Crypto.private_key_block?("hello")
